Modify HTML with survey questions.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div id="blanks">
       <form>
         <div class="form-group">
-          <label for="temperature">Do you prefer somewhere warm or on the cooler side?</label>
+          <label for="temperature">Do you prefer somewhere warm or cool?</label>
           <input id="temperature" class="form-control" type="text">
           <p>Type A or B in the blank space above corresponding to this list:</P>
             <ul>
@@ -31,6 +31,33 @@
                 <li>B. Nature</li>
               </ul>
             </div>
+            <div class="form-group">
+              <label for="surface">Do you prefer water or Land activities?</label>
+              <input id="surface" class="form-control" type="text">
+              <p>Type A or B in the blank space above corresponding to this list:</P>
+                <ul>
+                  <li>A. Land</li>
+                  <li>B. Water</li>
+                </ul>
+              </div>
+              <div class="form-group">
+                <label for="color">What color would describe your mood.</label>
+                <input id="color" class="form-control" type="text">
+                <p>Type A or B in the blank space above corresponding to this list:</P>
+                  <ul>
+                    <li>A. Blue</li>
+                    <li>B. Yellow</li>
+                  </ul>
+                </div>
+                <div class="form-group">
+                  <label for="temperature">How important is staying at a luxury hotel during your trip?</label>
+                  <input id="temperature" class="form-control" type="text">
+                  <p>Type A or B in the blank space above corresponding to this list:</P>
+                    <ul>
+                      <li>A. Very Important</li>
+                      <li>B. Not Important</li>
+                    </ul>
+                  </div>
           </form>
         </div>
       </div>
