Modify HTML and JS.

--- a/index.html
+++ b/index.html
@@ -50,16 +50,17 @@
                   </ul>
                 </div>
                 <div class="form-group">
-                  <label for="temperature">How important is staying at a luxury hotel during your trip?</label>
-                  <input id="temperature" class="form-control" type="text">
+                  <label for="hotel">How important is staying at a luxury hotel during your trip?</label>
+                  <input id="hotel" class="form-control" type="text">
                   <p>Type A or B in the blank space above corresponding to this list:</P>
                     <ul>
                       <li>A. Very Important</li>
                       <li>B. Not Important</li>
                     </ul>
                   </div>
-          </form>
-        </div>
-      </div>
-    </body>
-    </html>
+                  <button type="submit" class="btn">Submit</button>
+                </form>
+              </div>
+            </div>
+          </body>
+          </html>
