--- a/index.html
+++ b/index.html
@@ -61,6 +61,18 @@
                   <button type="submit" class="btn">Submit</button>
                 </form>
               </div>
+              <div id="destination1" class="hidden">
+                <h1>EGYPT!</h1>
+                <img src="img/egypt.jpg" alt="A picture of Egypt">
+              </div>
+              <div id="destination2" class="hidden">
+                <h1>ICELAND!</h1>
+                <img src="img/iceland.jpg" alt="A picture of Egypt">
+              </div>
+              <div id="destination3" class="hidden">
+                <h1>TAHITI!</h1>
+                <img src="img/tahiti.jpg" alt="A picture of Egypt">
+              </div>
             </div>
           </body>
           </html>
