Modify HTML, CSS and JS files.

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="css/styles.css" rel="stylesheet" type="text">
+  <link rel="stylesheet" href="css/styles.css" type="text/css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
   <script src=js/jquery-3.2.1.js></script>
   <script src=js/scripts.js></script>
@@ -61,15 +61,15 @@
                   <button type="submit" class="btn">Submit</button>
                 </form>
               </div>
-              <div id="destination1" class="hidden">
+              <div id="destination1">
                 <h1>EGYPT!</h1>
                 <img src="img/egypt.jpg" alt="A picture of Egypt">
               </div>
-              <div id="destination2" class="hidden">
+              <div id="destination2">
                 <h1>ICELAND!</h1>
                 <img src="img/iceland.jpg" alt="A picture of Egypt">
               </div>
-              <div id="destination3" class="hidden">
+              <div id="destination3">
                 <h1>TAHITI!</h1>
                 <img src="img/tahiti.jpg" alt="A picture of Egypt">
               </div>
